# etf_tools

./: .env.example  .gitignore  CLAUDE.md  explore_ncsr_api.py  pyproject.toml  ralph-log.txt  ralph-progress.md
.claude/: lisa-draft.md
.serena/: project.yml
alembic/: env.py
docs/: HANDOFF.md  SCHEMA.md  pipeline-review-items.md
docs/reference/: PARSER_REFERENCE_MAP.md  README.md  nport-xml-tech-spec-v1.7.html
docs/reference/xbrl-cef-2025/: cef-2025.xsd  cef-2025_pre.xsd  (+2 more)
docs/specs/: buld-the-nport-p-parser-per-the-specs-discussed-here-progress.txt  buld-the-nport-p-parser-per-the-specs-discussed-here.json  buld-the-nport-p-parser-per-the-specs-discussed-here.md  end-to-end-run-pipeline-comman-based-on-this-discussion-progress.txt  end-to-end-run-pipeline-comman-based-on-this-discussion.json  end-to-end-run-pipeline-comman-based-on-this-discussion.md  implement-24f-2nt-parser-progress.txt  implement-24f-2nt-parser.json  implement-24f-2nt-parser.md  implement-financial-highlights-parser-progress.txt  implement-financial-highlights-parser.json  implement-financial-highlights-parser.md  implement-the-485bpos-parser-progress.txt  implement-the-485bpos-parser.json  implement-the-485bpos-parser.md  ncsr-parser-progress.txt  ncsr-parser.json  ncsr-parser.md
scripts/: init_test_db.py
src/etf_pipeline/: cli.py  config.py  db.py  discover.py  load_etfs.py  models.py  parser_utils.py  sgml.py
tests/: conftest.py  test_discover.py  test_finhigh.py  test_flows.py  test_load_etfs.py  test_models.py  test_ncsr.py  test_nport.py  test_prospectus.py  test_run_all.py
(+65 files in other folders)
