[project]
name = "etf-pipeline"
version = "0.1.0"
description = "SEC EDGAR ETF data pipeline"
readme = "README.md"
authors = [
    { name = "Serge Blumenfeld", email = "serge.blumenfeld@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "click>=8.1",
    "edgartools>=5.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
etf-pipeline = "etf_pipeline.cli:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
